bower and package

--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "mean-template",
+  "name": "yum.my",
   "version": "0.0.0",
-  "homepage": "https://github.com/nss-cohort-2014-06-07/mean-template",
+  "homepage": "https://github.com/shrutijalewar/yum.my",
   "authors": [
-    "Chyld Medford <chyld.medford@gmail.com>"
+    "Shruti Sharma <shrutijalewar@gmail.com>"
   ],
   "description": "The MEAN Template",
   "license": "MIT",
